--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
+
+.btn {
+  @apply inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold;
+}
+.btn:hover {
+  @apply bg-indigo-400
+}
+.btn:focus{
+  @apply outline-none shadow-outline;
+}
+.btn:active{
+  @apply bg-indigo-600
+}
+
+@media(min-width: 640px) {
+    .btn {
+        font-size: 1rem;
+    }
+}
+
+
 @tailwind utilities;
